Fix robot on mobile

--- a/src/style.css
+++ b/src/style.css
@@ -516,10 +516,14 @@ body,
 .robot-image {
   max-width: 100vw;
   max-width: 100dvw;
+  max-height: 100vh;
+  max-height: 100dvh;
   width: 1200px;
   position: absolute;
   bottom: 0;
   left: 0;
+  object-fit: contain;
+  object-position: left;
 }
 
 .explanation-button {
